# rust-ordered

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: README.md  rust.yml
contrib/: crates.sh
examples/: docs.rs  point.rs
src/: lib.rs
